middleware/redisinsight/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisinsight
  labels:
    app.kubernetes.io/instance: redisinsight
    app.kubernetes.io/name: redisinsight
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: redisinsight
      app.kubernetes.io/name: redisinsight
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: redisinsight
        app.kubernetes.io/name: redisinsight
    spec:
      serviceAccountName: redisinsight
      securityContext:
        fsGroup: 2000
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: redisinsight-pv-claim
      containers:
        - name: redisinsight
          image: redis/redisinsight
          volumeMounts:
            - name: db
              mountPath: /db
          ports:
            - name: http
              containerPort: 5540
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add: ["CAP_IPC_LOCK"]
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 10Gi
