middleware/redisinsight/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redisinsight-service
spec:
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: 8001
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: redisinsight
    app.kubernetes.io/name: redisinsight
