middleware/redisinsight/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redisinsight-ingress
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    cert-manager.io/cluster-issuer: "ca-issuer"
spec:
  ingressClassName: private-nginx
  tls:
    - secretName: redisinsight-ingress-tls
      hosts:
        - redisinsight.tools.${cluster_region}.${cluster_domain}
  rules:
    - host: "redisinsight.tools.${cluster_region}.${cluster_domain}"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: redisinsight-service
                port:
                  name: http
